<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginEnd="139dp"
        android:text="@string/lab2_appsiot"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/textViewBienvenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="139dp"
        android:text="@string/bienvenido"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLab"
        tools:ignore="MissingConstraints" />

    <!-- Replace with your actual drawable resource -->

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="182dp"
        android:layout_height="240dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo_telemath"
        android:src="@drawable/logo_telemath"
        app:layout_constraintBottom_toTopOf="@+id/textViewTeleMath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBienvenido"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewTeleMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="8dp"
        android:text="@string/telemath"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/buttonIndicaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonIndicaciones"
        android:layout_width="289dp"
        android:layout_height="55dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="62dp"
        android:text="@string/indicaciones"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeleMath"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="289dp"
        android:layout_height="55dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="75dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIndicaciones"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>